<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewProfilePic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/person"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#6E6B6B"
            android:textSize="14sp"/>
    </LinearLayout>
        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#6E6B6B"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>