<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.auth.PhoneLogin">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="#118C16"
            android:text="@string/phone"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/verify"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"/>

            <EditText
                android:id="@+id/editTextCountryCode"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="91"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:hint="@string/phone_num"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="@string/charges"/>

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="200dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/code"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
</layout>